2011-06-30  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Update new-run-webkit-tests now that the wk2 shared skipped list has moved
        https://bugs.webkit.org/show_bug.cgi?id=63780

        The shared list was moved from mac-wk2 to wk2 as part of
        http://trac.webkit.org/changeset/90125.

        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:

2011-06-30  Kenichi Ishibashi  <bashi@chromium.org>

        Reviewed by Darin Adler.

        Style Checker should flag removal of "developmentRegion = English;" from project.pbxproj.
        https://bugs.webkit.org/show_bug.cgi?id=62022

        Adds XcodeProjectFileChecker to check removal of "developmentRegion".

        * Scripts/webkitpy/style/checker.py: Added XcodeProjectFileChecker as a checker for *.pbxproj.
        * Scripts/webkitpy/style/checkers/xcodeproj.py: Added.
        * Scripts/webkitpy/style/checkers/xcodeproj_unittest.py: Added.

2011-06-30  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Ojan Vafai.

        nrwt: make sharding tests needing locks less hard-coded
        https://bugs.webkit.org/show_bug.cgi?id=63112

        This change also changes the manager logic so that it will
        drop the server lock as soon as all of the shards requiring
        the lock have completed.

        This change includes some minor namespace/import changes in the
        unit tests, and also makes the Manager a new-style object, which
        it should've been all along.

        * Scripts/webkitpy/layout_tests/layout_package/manager.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager_unittest.py:

2011-06-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Remove threaded mode from new-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=63771

        This mode is not used and is buggy.  Rather than carry around a bunch